--- a/report/body/implementation.tex
+++ b/report/body/implementation.tex
@@ -76,3 +76,7 @@ Using these determined rates both the mutation and crossover operators were test
 \section{Transfer Learning}
 
 The transfer learning can be performed by initiating another instance of the Runner class with a new environment. The best agent from the final execution of the GA can be passed into this Runner to compare this agent with an agent that just takes random moves at each step. We can perfom this over N episodes, where N will be defined depending on the time constraints, and compare the results.
+
+\paragraph{}
+
+All code for this project can be found in this repository - https://github.com/tomcotter7/OpenAI-GeneticAlgorithms
